@@ -17,6 +17,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -80,7 +81,7 @@ public class GithubProxyService {
 
             responsePOJO.setBranches(Arrays.stream(branches)
                     .map(externalBranch -> new ProxyBranch(externalBranch.getName(), externalBranch.getCommit().getSha()))
-                    .toList());
+                    .collect(Collectors.toList()));
         });
     }
 
